@@ -18,6 +18,7 @@ Version 1.4.0:
 - Fixed Whois Client with IDN domains - With thanks to Pds Informatica
 - RDS further fix's related to dSHeuristics
 - Fixed RDS Session Host removal from collection
+- Fixed Scheduled task CheckWebSiteTask for TLS1.2 support
 
 Version 1.3.0:
 - Changed all Int16 to Int32 due to issues with Int16 values
